--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,91 @@
 html {
     box-sizing: border-box;
 }
-*, *:after, *:before {
+
+*,
+*:after,
+*:before {
     box-sizing: inherit;
 }
+
 body {
     box-sizing: border-box;
     background-color: #f2f2f2;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .contenedor {
     max-width: 1100px;
     margin: 0 auto;
 }
+
 h2 {
     flex: 0 1 100%;
     text-align: center;
     font-size: 1.6rem;
 }
+
 h3 {
     font-family: 'Libre Baskerville', serif;
-    margin:0;
+    margin: 0;
     font-weight: 700;
-
 }
+
 img {
     max-width: 100%;
 }
 
+
+/* Header */
+
+.hero {
+    background-image: url(../img/hero.jpg);
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.header {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.barra {
+    position: absolute;
+    background-color: #008fd1;
+    width: 100%;
+    top: 1rem;
+    padding: 1rem 0;
+}
+
+
 /* Contenido */
+
 .contenido {
     background-color: white;
     margin-bottom: 1rem;
     text-transform: uppercase;
 }
+
 .contenido {
     padding: 1rem;
     text-align: center;
 }
+
 .contenido h3 {
     text-align: center;
     font-size: .9rem;
     line-height: 1.4rem;
 }
+
 .contenido span {
-    color:#db008d;
+    color: #db008d;
 }
+
 .boton {
     background-color: #008fd1;
     color: white;
@@ -55,6 +95,7 @@ img {
     text-decoration: none;
     text-transform: uppercase;
 }
+
 @media screen and (min-width:480px) {
     .contenido-principal {
         display: flex;
@@ -63,7 +104,6 @@ img {
     }
     .entrada {
         flex: 0 1 calc(50% - 1rem);
-
     }
 }
 
@@ -72,4 +112,3 @@ img {
         flex: 0 1 calc(33% - 1rem);
     }
 }
-
