--- a/css/styles.css
+++ b/css/styles.css
@@ -162,3 +162,53 @@ img {
         flex: 0 1 calc(33% - 1rem);
     }
 }
+
+
+/* Categorias iconos */
+
+.categorias ul {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    list-style: none;
+}
+
+.categorias ul li {
+    flex: 1 0 calc(50%);
+    padding: 2rem;
+}
+
+@media screen and (min-width:768px) {
+    .categorias ul li {
+        flex: 1;
+    }
+}
+
+.categorias ul li:nth-child(1) {
+    background-color: #008fd1;
+}
+
+.categorias ul li:nth-child(2) {
+    background-color: #db008d;
+}
+
+.categorias ul li:nth-child(3) {
+    background-color: #9800d1;
+}
+
+.categorias ul li:nth-child(4) {
+    background-color: #eca300;
+}
+
+.categorias ul li a {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+}
+
+.categorias ul li i {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
